Fixed spacing and dded missing semicolons to be consistent

--- a/src/html5.html
+++ b/src/html5.html
@@ -4,7 +4,7 @@
         <script>
             var mainDiv = document.getElementById("main");
 
-            var i = 1
+            var i = 1;
 
             for (i = 1; i <= 3; i++) {
                 mainDiv.innerHTML += '<div  style="background-color: white; margin: 1%; overflow: auto" >' + i + "</div>";
@@ -13,7 +13,7 @@
             mainDiv.addEventListener("click", function() {
                 mainDiv.innerHTML += '<div  style="background-color: white; margin: 1%; overflow: auto" >' + i + "</div>";
 
-                i++
+                i++;
             })
         </script>
     </body>
